# Open-AutoGLM

./: .gitignore  README.md  README_coding_agent.md  README_en.md  SKILL.md  install.sh  ios.py  main.py  pyproject.toml
docs/: phone-cli.md
examples/: basic_usage.py
phone_agent/: agent.py  agent_ios.py  cli.py  device_factory.py  phone_mode_logging.py
phone_agent/actions/: handler.py  handler_ios.py  phone_handlers.py
phone_agent/adb/: __init__.py  device.py  input.py
phone_agent/config/: apps.py  prompts_en.py  prompts_zh.py
phone_agent/hdc/: __init__.py  device.py  input.py
phone_agent/model/: client.py
phone_agent/xctest/: __init__.py  device.py  input.py
scripts/: check_deployment_cn.py  check_deployment_en.py
tests/: test_adb_current_app.py  test_adb_input.py  test_adb_installed_apps.py  test_hdc_current_app.py  test_hdc_installed_apps.py  test_phone_mode_logging.py  test_phone_parser.py  test_phone_prerequisites.py  test_ui_tree.py  test_xctest_current_app.py  test_xctest_installed_apps.py
