[project]
name = "open-autoglm"
version = "0.1.0"
description = "AI-powered phone automation framework"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Zhipu AI" }]

dependencies = [
    "Pillow>=12.0.0",
    "openai>=2.9.0",
    "requests>=2.31.0",
    "socksio>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pre-commit>=4.5.0",
]

[project.scripts]
phone-use = "phone_agent.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]
include = ["phone_agent*"]

[dependency-groups]
dev = [
    "ruff>=0.15.6",
]
